# first_api_repo

./: .env  README.md  auth_utils.py  database.py  main.py  pyproject.toml  requirements.txt  schemas.py
routers/: route_auth.py  route_todo.py
