[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "kazuma0606",email = "yoshimura.hisa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (==0.14.0)",
    "fastapi-csrf-protect (>=1.0.0,<2.0.0)",
    "motor (>=3.6.1,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pymongo (==4.9)",
    "bcrypt (>=4.2.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
